fix for main page height on mobile

--- a/scss/main.scss
+++ b/scss/main.scss
@@ -77,6 +77,7 @@ main {
 
   &#home {
     overflow: hidden;
+    height: 100vh;
     h1 {
       margin-top: 20vh;
     }
